--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<!DOCTYPE html>
+<html>
     <head>
         <title>Hello Coursera!</title>
-    </head>
+</head>
     <body>
-    	<h1>Hello Coursera!</h1>
+    	<h1>Hello Coursera!
     </body>
 </html>
